--- a/index.html
+++ b/index.html
@@ -15,7 +15,47 @@
 
 <body class="page">
     <header class="header">
-        <div class="container"></div>
+        <div class="container">
+            <div class="header__top">
+                <img class="header__logo" src="./images/header/logo.png" alt="Логотип сайта похожий на дискорд">
+                <div class="socials">
+                    <ul class="socials__list">
+                        <li class="socials__item">
+                            <a class="socials__link" href="#">
+                                <img class="socials__img" src="./images/socials/github.png" alt="Ссылка на гитхаб">
+                            </a>
+                        </li>
+                        <li class="socials__item">
+                            <a class="socials__link" href="#">
+                                <img class="socials__img" src="./images/socials/twitter.png" alt="Ссылка на твиттер">
+                            </a>
+                        </li>
+                        <li class="socials__item">
+                            <a class="socials__link" href="#">
+                                <img class="socials__img" src="./images/socials/instagram.png"
+                                    alt="Ссылка на инстаграм (войти в который можно только с VPN)">
+                            </a>
+                        </li>
+                        <li class="socials__item">
+                            <a class="socials__link" href="#">
+                                <img class="socials__img" src="./images/socials/facebook.png" alt="Ссылка на фейсбук">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="header__main">
+                <div class="header__content">
+                    <span class="header__span">Фрилансер</span>
+                    <h1 class="header__title">Петр Федоров</h1>
+                    <p class="header__text">Разрабатываю сайты для малого и среднего бизнеса. У меня можно заказать
+                        дизайн и
+                        верстку небольшого сайта или интернет-магазина</p>
+                    <button class="header__button">Бесплатная консультация </button>
+                </div>
+                <img class="header__avatar" src="./images/header/avatar.jpg" alt="Моя фотография">
+            </div>
+        </div>
     </header>
     <main class="main">
         <div class="container"></div>
