--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 </head>
 
 <body class="page">
+
+    <!-- header -->
     <header class="header">
         <div class="container">
             <div class="header__top">
@@ -57,9 +59,58 @@
             </div>
         </div>
     </header>
+
+    <!-- main -->
     <main class="main">
-        <div class="container"></div>
+
+        <!-- Секция comfort -->
+        <section class="comfort">
+            <div class="container">
+                <h2 class="section-title">Со мной удобно работать</h2>
+                <ul class="comfort__list">
+                    <li class="comfort__item">
+                        <img class="comfort__item-img" src="./images/comfort/offer-img.png" alt="По договору">
+                        <h3 class="comfort__item-title">По договору</h3>
+                        <p class="comfort__item-text">Предоставлю все документы для бухгалтерии: договоры, счета и акты.
+                            Работаю как ИП без НДС.</p>
+                    </li>
+                    <li class="comfort__item">
+                        <img class="comfort__item-img" src="./images/comfort/deadline-img.png" alt="Точно в срок">
+                        <h3 class="comfort__item-title">Точно в срок</h3>
+                        <p class="comfort__item-text">В договоре прописана моя ответственность за срок проекта. Если
+                            просрочу — плачу неустойку. </p>
+                    </li>
+                    <li class="comfort__item">
+                        <img class="comfort__item-img" src="./images/comfort/agreement-img.png" alt="Ценник под вас">
+                        <h3 class="comfort__item-title">Ценник под вас</h3>
+                        <p class="comfort__item-text">Если у вас нетиповой проект, сделаю рассчет цены за работу и
+                            объясню, как складывается цена.</p>
+                    </li>
+                    <li class="comfort__item">
+                        <img class="comfort__item-img" src="./images/comfort/steps-img.png" alt="Премежуточные итоги">
+                        <h3 class="comfort__item-title">Премежуточные итоги</h3>
+                        <p class="comfort__item-text">Показываю работу поэтапно, а не в последий момент перед крайним
+                            сроком. </p>
+                    </li>
+                    <li class="comfort__item">
+                        <img class="comfort__item-img" src="./images/comfort/storage-img.png" alt="Хостинг и домен">
+                        <h3 class="comfort__item-title">Хостинг и домен</h3>
+                        <p class="comfort__item-text">Если мы договорились о цене проекта, в неё входит всё: домен и
+                            хостинг на год + SSL сертификат.</p>
+                    </li>
+                    <li class="comfort__item">
+                        <img class="comfort__item-img" src="./images/comfort/conversation-img.png"
+                            alt="Не брошу после сдачи">
+                        <h3 class="comfort__item-title">Не брошу после сдачи</h3>
+                        <p class="comfort__item-text">Научу вас или вашего сотрудника пользоваться сайтом, запишу
+                            видео-инструкции.</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
+
+    <!-- footer -->
     <footer class="footer">
         <div class="container"></div>
     </footer>
