Создал секцию works-top, проверил на валидаторах, анимировал

--- a/index.html
+++ b/index.html
@@ -108,6 +108,32 @@
                 </ul>
             </div>
         </section>
+
+        <!-- Секция works -->
+        <section class="works">
+            <div class="works-top">
+                <div class="container">
+                    <h2 class="section-title">Выполненные проекты</h2>
+                    <ul class="works-top__list">
+                        <li class="works-top__item">
+                            <h3 class="works-top__title">The curious corner
+                                of chamarel</h3>
+                            <a class="works-top__link" href="#">Посмотреть</a>
+                        </li>
+                        <li class="works-top__item">
+                            <h3 class="works-top__title">Gymkhana club golf
+                                course</h3>
+                            <a class="works-top__link" href="#">Посмотреть</a>
+                        </li>
+                        <li class="works-top__item">
+                            <h3 class="works-top__title">Tamarind falls hiking
+                                trip - full day</h3>
+                            <a class="works-top__link" href="#">Посмотреть</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- footer -->
