Создал нижнюю часть работ с галереей и супер-видео-плеером, полуадаптировал

--- a/index.html
+++ b/index.html
@@ -133,6 +133,57 @@
                     </ul>
                 </div>
             </div>
+
+            <div class="works-bottom">
+                <div class="container">
+                    <ul class="works-bottom__list">
+                        <li class="works-bottom__item">
+                            <img class="works-bottom__img" src="./images/works-bottom/1.jpg" alt="Картинка работы">
+                        </li>
+                        <li class="works-bottom__item">
+                            <img class="works-bottom__img" src="./images/works-bottom/2.jpg" alt="Картинка работы">
+                        </li>
+                        <li class="works-bottom__item">
+                            <img class="works-bottom__img" src="./images/works-bottom/3.jpg" alt="Картинка работы">
+                        </li>
+                        <li class="works-bottom__item">
+                            <img class="works-bottom__img" src="./images/works-bottom/4.jpg" alt="Картинка работы">
+                        </li>
+                        <li class="works-bottom__item">
+                            <img class="works-bottom__img" src="./images/works-bottom/5.jpg" alt="Картинка работы">
+                        </li>
+                        <li class="works-bottom__item">
+                            <video class="works-bottom__video" src="./images/works-bottom/video1.mp4" playsinline
+                                poster="./images/works-bottom/video1.jpg">
+                            </video>
+                            <button class="works-bottom__video-button"></button>
+                            <span class="works-bottom__video-timer"></span>
+                        </li>
+                        <li class="works-bottom__item">
+                            <img class="works-bottom__img" src="./images/works-bottom/6.jpg" alt="Картинка работы">
+                        </li>
+                        <li class="works-bottom__item">
+                            <img class="works-bottom__img" src="./images/works-bottom/7.jpg" alt="Картинка работы">
+                        </li>
+                        <li class="works-bottom__item">
+                            <img class="works-bottom__img" src="./images/works-bottom/8.jpg" alt="Картинка работы">
+                        </li>
+                        <li class="works-bottom__item">
+                            <img class="works-bottom__img" src="./images/works-bottom/9.jpg" alt="Картинка работы">
+                        </li>
+                        <li class="works-bottom__item">
+                            <video class="works-bottom__video" src="./images/works-bottom/video2.mp4" playsinline
+                                poster="./images/works-bottom/video2.jpg">
+                            </video>
+                            <button class="works-bottom__video-button"></button>
+                            <span class="works-bottom__video-timer"></span>
+                        </li>
+                        <li class="works-bottom__item">
+                            <img class="works-bottom__img" src="./images/works-bottom/10.jpg" alt="Картинка работы">
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </section>
     </main>
 
@@ -140,6 +191,8 @@
     <footer class="footer">
         <div class="container"></div>
     </footer>
+
+    <script src="pages/index.js"></script>
 </body>
 
 </html>
