Добавил анимации клика, плавного скролла и аватарки хедера

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <p class="header__text">Разрабатываю сайты для малого и среднего бизнеса. У меня можно заказать
                         дизайн и
                         верстку небольшого сайта или интернет-магазина</p>
-                    <button class="header__button button">Бесплатная консультация </button>
+                    <a class="header__button button" href="#footer">Бесплатная консультация </a>
                 </div>
                 <img class="header__avatar" src="./images/header/avatar.jpg" alt="Моя фотография">
             </div>
@@ -188,7 +188,7 @@
     </main>
 
     <!-- footer -->
-    <footer class="footer">
+    <footer class="footer" id="footer">
         <div class="container">
             <h2 class="section-title">Свяжитесь со мной</h2>
             <div class="footer__wrapper">
